# dfdx_cifar

./: .gitignore  Cargo.toml  Dockerfile  README.md
examples/: mnist.rs
src/: helper.rs  main.rs  old.rs  resnet.rs  simple_conv.rs
src/networks/: alexnet.rs  fast_resnet.rs  mod.rs  resnet.rs  resnet18.rs  simple_conv.rs  smallconv.rs
